tests/ui/boolean_enforcement/fail/bitand_rhs_text.stderr
error[E0277]: `drizzle::postgres::types::Text` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/bitand_rhs_text.rs:15:35
   |
15 |     let _ = eq(user.active, true) & user.name;
   |                                   ^ logical operations require a boolean-typed expression
   |
   = help: the trait `BooleanLike` is not implemented for `drizzle::postgres::types::Text`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
   = note: required for `SQLExpr<'_, drizzle::postgres::prelude::PostgresValue<'_>, drizzle::postgres::types::Boolean>` to implement `BitAnd<UserName>`
